# Conta

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: rules.yml
conta/app/: cli.py  db.py  models.py  schemas.py
conta/app/services/: exportar.py  irpf.py  iva.py  libros.py
conta/app/services/importacion_pdf/: campos_factura.py  clasificador_fiscal.py  extractor_pdf.py  importador_factura.py  normalizador_texto.py
conta/app/tui/: app.py  conta.tcss
conta/app/tui/screens/: dashboard.py  emite.py  facturas.py  gasto_form.py  gastos.py  m130.py
conta_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrations/: fix_tipo_iva.sql
